Fixed scroll on mobile devices

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,6 +12,12 @@ body {
     overflow: hidden;
 }
 
+@media screen and (max-width: 960px) {
+    body {
+        overflow: initial;
+    }
+}
+
 .column {
     display: flex;
     flex-direction: column;
